# agentic_ai

./: LICENSE  Q&A  README.md
autogen/: README.md  pyproject.toml
autogen/src/: main.py
crew-ai/: .env  README.md  pyproject.toml
crew-ai/src/: main.py
langflow/: README.md  pyproject.toml
langflow/src/: main.py
llama-index/: .env  README.md  pyproject.toml
llama-index/src/: main.py
