[tool.poetry]
name = "src"
version = "0.1.0"
description = "A multi-agent AI system for stock market analysis and investment reporting."
authors = ["Sridhar"]
license = "MIT"

# Define the package location
packages = [{ include = "src" }]

# Define the source for the package
[[tool.poetry.source]]
name = "crewai"
url = "https://pypi.org/simple"



[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pip = ">=25.0.1"
setuptools = ">=69.1.1"
pyautogen = ">=0.8.5"
yfinance = "<0.2.0"  # Must be <0.2.0 due to NumPy 1.15
python-dotenv = ">=1.1.0"
openai = ">=1.70.0"
pandas = "<1.3.0"  # Compatible with NumPy 1.15
numpy = "1.15"  # Strict requirement
ta-lib = ">=0.4.0"

# Optional dependencies for development and testing
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
