[tool.poetry]
name = "src"
version = "0.1.0"
description = "A multi-agent AI system for stock market analysis and investment reporting."
authors = ["Sridhar"]
license = "MIT"

# Define the package location
packages = [{ include = "src" }]

# Define the source for the package
[[tool.poetry.source]]
name = "llama_index"
url = "https://pypi.org/simple"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pip = ">=25.0.1"
setuptools = ">=69.1.1"
llama-index = ">=0.12.29"
yfinance = ">=0.2.28"
python-dotenv = "1.0.1"
pandas = ">=2.1.4"


# Optional dependencies for development and testing
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"